--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
