--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "date-fns": "^2.30.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
