--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-inlinesvg": "^4.1.0",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^2.0.0"
