--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.1",
     "date-fns": "^2.30.0",
